Project

General

Profile

Actions

Bug #38324

closed

mds: decoded LogEvent may leak during shutdown

Added by Patrick Donnelly about 5 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
High
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

<error>
  <unique>0x19e</unique>
  <tid>1</tid>
  <threadname>ceph-mds</threadname>
  <kind>Leak_DefinitelyLost</kind>
  <xwhat>
    <text>2,565 (576 direct, 1,989 indirect) bytes in 1 blocks are definitely lost in loss record 415 of 442</text>
    <leakedbytes>2565</leakedbytes>
    <leakedblocks>1</leakedblocks>
  </xwhat>
  <stack>
    <frame>
      <ip>0x4C2A243</ip>
      <obj>/usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so</obj>
      <fn>operator new(unsigned long)</fn>
      <dir>/builddir/build/BUILD/valgrind-3.13.0/coregrind/m_replacemalloc</dir>
      <file>vg_replace_malloc.c</file>
      <line>334</line>
    </frame>
    <frame>
      <ip>0x540949</ip>
      <obj>/usr/bin/ceph-mds</obj>
      <fn>LogEvent::decode_event(ceph::buffer::list&amp;, ceph::buffer::list::iterator_impl&lt;true&gt;&amp;, unsigned int)</fn>
      <dir>/usr/src/debug/ceph-14.0.1-3661-g51104df/src/mds</dir>
      <file>LogEvent.cc</file>
      <line>153</line>
    </frame>
    <frame>
      <ip>0x541C38</ip>
      <obj>/usr/bin/ceph-mds</obj>
      <fn>LogEvent::decode(ceph::buffer::list&amp;)</fn>
      <dir>/usr/src/debug/ceph-14.0.1-3661-g51104df/src/mds</dir>
      <file>LogEvent.cc</file>
      <line>57</line>
    </frame>
    <frame>
      <ip>0x4D3BD7</ip>
      <obj>/usr/bin/ceph-mds</obj>
      <fn>MDLog::_replay_thread()</fn>
      <dir>/usr/src/debug/ceph-14.0.1-3661-g51104df/src/mds</dir>
      <file>MDLog.cc</file>
      <line>1388</line>
    </frame>
    <frame>
      <ip>0x2491FC</ip>
      <obj>/usr/bin/ceph-mds</obj>
      <fn>MDLog::ReplayThread::entry()</fn>
      <dir>/usr/src/debug/ceph-14.0.1-3661-g51104df/src/mds</dir>
      <file>MDLog.h</file>
      <line>94</line>
    </frame>
    <frame>
      <ip>0xF662E24</ip>
      <obj>/usr/lib64/libpthread-2.17.so</obj>
      <fn>start_thread</fn>
    </frame>
    <frame>
      <ip>0x107D6BAC</ip>
      <obj>/usr/lib64/libc-2.17.so</obj>
      <fn>clone</fn>
    </frame>
  </stack>
</error>

From: /ceph/teuthology-archive/pdonnell-2019-02-13_18:00:57-fs-wip-pdonnell-testing-20190213.160745-distro-basic-smithi/3586031/remote/smithi087/log/valgrind/mds.a-s.log.gz


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #38349: mimic: mds: decoded LogEvent may leak during shutdownRejectedPatrick DonnellyActions
Copied to CephFS - Backport #38350: luminous: mds: decoded LogEvent may leak during shutdownRejectedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly about 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 26434
Actions #2

Updated by Patrick Donnelly about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38349: mimic: mds: decoded LogEvent may leak during shutdown added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38350: luminous: mds: decoded LogEvent may leak during shutdown added
Actions #5

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF